added some deafult places

--- a/index.html
+++ b/index.html
@@ -21,9 +21,19 @@
       <img src="images/homepage1.png" alt="island" />
       <div class="text-container">
         <p id="title">VibeFindr</p>
-        <p id="catch_phrase">“New in Town? We’ve Got You Covered.”</p>
+        <p id="catch_phrase">“New in Town? We've Got You Covered.”</p>
       </div>
     </div>
+
+    <!-- Trending Places -->
+    <section class="trending-places">
+      <div class="container">
+        <h2 class="section-title">Trending Places</h2>
+        <div class="places-grid" id="places-container">
+          <!-- Places will be dynamically loaded here -->
+        </div>
+      </div>
+    </section>
 
     <!-- Features -->
     <section>
@@ -86,5 +96,7 @@
         </div>
       </div>
     </section>
+
+    <script src="home_page.js"></script>
   </body>
 </html>
