added cards for top places

--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
       </div>
     </section>
 
-    <script src="home_page.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
