--- a/index.html
+++ b/index.html
@@ -10,18 +10,34 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <link rel="stylesheet" href="src/css/style.css" />
   </head>
-  <link rel="stylesheet" href="style.css" />
   <body>
     <div class="hero">
       <div class="nav-buttons">
         <button class="button sign-up">Sign Up</button>
         <button class="button login">Login</button>
+        <!-- google login -->
+        <div
+          id="g_id_onload"
+          data-client_id="302595107751-k6lm54kco3ikcuh4lv8pdmfkbaergvb0.apps.googleusercontent.com"
+          data-callback="handleCredentialResponse"
+        ></div>
+        <div
+          class="g_id_signin"
+          data-type="standard"
+          data-size="large"
+          data-theme="outline"
+          data-text="sign_in_with"
+          data-shape="rectangular"
+          data-logo_alignment="left"
+        ></div>
       </div>
-      <img src="images/homepage1.png" alt="island" />
+      <img src="src/images/homepage1.png" alt="island" />
       <div class="text-container">
         <p id="title">VibeFindr</p>
-        <p id="catch_phrase">“New in Town? We've Got You Covered.”</p>
+        <p id="catch_phrase">"New in Town? We've Got You Covered."</p>
       </div>
     </div>
 
@@ -97,6 +113,6 @@
       </div>
     </section>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="src/js/app.js"></script>
   </body>
 </html>
