--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VibeFndr</title>
+    <title>VibeFindr</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +16,7 @@
   <body>
     <div class="hero">
       <div class="nav-buttons">
-        <button class="button sign-up">Sign Up</button>
+        <button id="explore-button" class="button sign-up">Explore</button>
         <button class="button login">Login</button>
         <!-- google login -->
         <div
@@ -45,7 +45,7 @@
     <section class="trending-places">
       <div class="container">
         <h2 class="section-title">Trending Places</h2>
-        <div class="places-grid" id="places-container">
+        <div class="places-grid animate-on-scroll" id="places-container">
           <!-- Places will be dynamically loaded here -->
         </div>
       </div>
@@ -114,5 +114,6 @@
     </section>
 
     <script type="module" src="src/js/app.js"></script>
+    <script src="src/js/animations.js"></script>
   </body>
 </html>
