added config folder

--- a/main_page.html
+++ b/main_page.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="src/css/style.css" />
   </head>
-  <body>
+  <body class="main-page">
     <!-- Header -->
     <section class="gradient-background">
       <div>
