--- a/main_page.html
+++ b/main_page.html
@@ -43,6 +43,7 @@
                 class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
               >
                 <li>
+                    <!-- goes back to home page -->
                   <a
                     href="/"
                     class="nav-link px-2 text-white d-flex align-items-center"
@@ -85,17 +86,20 @@
       </div>
     </section>
 
-    
     <!-- images  -->
     <section class="carousel-section">
       <div class="container mt-5">
         <div class="search-container">
-            <div class="search-wrapper">
-              <!-- <i class="fas fa-search search-icon"></i> -->
-              <input type="text" class="search-input" placeholder="Enter Something">
-              <button class="search-button">Search</button>
-            </div>
+          <div class="search-wrapper">
+            <!-- <i class="fas fa-search search-icon"></i> -->
+            <input
+              type="text"
+              class="search-input"
+              placeholder="Enter Something"
+            />
+            <button class="search-button">Search</button>
           </div>
+        </div>
         <div id="carouselExampleIndicators" class="carousel slide">
           <div class="carousel-indicators">
             <button
@@ -163,6 +167,22 @@
         </div>
       </div>
     </section>
+
+    <!-- Adding a couple food and tourist attrations based on their location -->
+    <section class="nearby-places" style="padding: 40px">
+      <div class="container">
+        <h2 style="text-align: center">Nearby Places</h2>
+
+        <div id="nearby-places-container" style="margin-top: 20px">
+          <!-- places will go here -->
+        </div>
+      </div>
+    </section>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=REMOVED_KEY&libraries=places&v=beta&loading=async"></script>
+
+    <script type="module" src="src/js/places.js"></script>
+  
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
