creating a backend server

--- a/main_page.html
+++ b/main_page.html
@@ -197,7 +197,7 @@
       </div>
     </section>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=REMOVED_KEY&libraries=places&v=beta&loading=async"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=REMOVED_KEY&libraries=places&v=beta&loading=async"></script> -->
 
     <script type="module" src="src/js/places.js"></script>
 
