added schedule generator

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="hero">
       <div class="nav-buttons">
         <button id="explore-button" class="button sign-up">Explore</button>
-        <button class="button login">Login</button>
+        <!-- <button class="button login">Login</button> -->
         <!-- google login -->
         <div
           id="g_id_onload"
