--- a/main_page.html
+++ b/main_page.html
@@ -67,18 +67,18 @@
                 class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3"
                 role="search"
               >
-                <input
+                <!-- <input
                   type="search"
                   class="form-control form-control-dark text-bg-dark"
                   placeholder="Search..."
                   aria-label="Search"
-                />
+                /> -->
               </form>
               <div class="text-end">
-                <button type="button" class="btn btn-outline-light me-2">
+                <!-- <button type="button" class="btn btn-outline-light me-2">
                   Login
-                </button>
-                <button type="button" class="btn btn-warning">Sign-Up</button>
+                </button> -->
+                <button type="button" class="btn btn-warning">Schedule Your Day</button>
               </div>
             </div>
           </div>
@@ -199,8 +199,9 @@
 
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=REMOVED_KEY&libraries=places&v=beta&loading=async"></script> -->
 
-    <script type="module" src="src/js/places.js"></script>
-    <script type="module" src="src/js/search.js"></script>
+    <script src="src/js/places.js"></script>
+    <script src="src/js/search.js"></script>
+    <!-- <script src="src/js/schedule.js"></script> -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
