--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!-- Welcome screen for VibeFindr web application -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,9 +11,12 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="../src/css/style.css" />
   </head>
   <body>
     <div class="hero">
@@ -23,7 +27,7 @@
         <button id="explore-button" class="button sign-up">Explore</button>
 
         <!-- google login -->
-        <div
+        <!-- <div
           id="g_id_onload"
           data-client_id="302595107751-k6lm54kco3ikcuh4lv8pdmfkbaergvb0.apps.googleusercontent.com"
           data-callback="handleCredentialResponse"
@@ -36,9 +40,9 @@
           data-text="sign_in_with"
           data-shape="rectangular"
           data-logo_alignment="left"
-        ></div>
+        ></div> -->
       </div>
-      <img src="src/images/homepage1.png" alt="island" />
+      <img src="../src/images/homepage1.png" alt="island" />
       <div class="text-container">
         <p id="title">VibeFindr</p>
         <p id="catch_phrase">"New in Town? We've Got You Covered."</p>
@@ -63,7 +67,7 @@
             <div
               class="icon-square text-body-emphasis bg-body-white d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3"
             >
-            <i class="bi bi-calendar-check-fill"></i>
+              <i class="bi bi-calendar-check-fill"></i>
             </div>
             <div>
               <h3 class="fs-2 text-body-emphasis">Personalized Schedule</h3>
@@ -80,7 +84,7 @@
             <div
               class="icon-square text-body-emphasis bg-body-white d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3"
             >
-            <i class="bi bi-people-fill"></i>
+              <i class="bi bi-people-fill"></i>
             </div>
             <div>
               <h3 class="fs-2 text-body-emphasis">Group Travel Planning</h3>
@@ -96,12 +100,10 @@
             <div
               class="icon-square text-body-emphasis bg-body-white d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3"
             >
-            <i class="bi bi-geo-alt-fill"></i>
+              <i class="bi bi-geo-alt-fill"></i>
             </div>
             <div>
-              <h3 class="fs-2 text-body-emphasis">
-                Real-Time Location
-              </h3>
+              <h3 class="fs-2 text-body-emphasis">Real-Time Location</h3>
               <p>
                 Find the best places near you with real-time location data. Get
                 instant recommendations based on your current location, complete
@@ -114,7 +116,7 @@
       </div>
     </section>
 
-    <script type="module" src="src/js/app.js"></script>
-    <script src="src/js/animations.js"></script>
+    <script type="module" src="../src/js/app.js"></script>
+    <script src="../src/js/animations.js"></script>
   </body>
 </html>
