cleaned files path

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <link rel="stylesheet" href="../src/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="hero">
@@ -42,7 +42,7 @@
           data-logo_alignment="left"
         ></div> -->
       </div>
-      <img src="../src/images/homepage1.png" alt="island" />
+      <img src="./images/homepage1.png" alt="island" />
       <div class="text-container">
         <p id="title">VibeFindr</p>
         <p id="catch_phrase">"New in Town? We've Got You Covered."</p>
