--- a/public/main_page.html
+++ b/public/main_page.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="../src/css/main_page.css" />
+    <link rel="stylesheet" href="./css/main_page.css" />
   </head>
   <body class="main-page">
     <!-- Header -->
@@ -140,7 +140,7 @@
             <div class="carousel-item active">
               <div class="carousel-img-overlay"></div>
               <img
-                src="../src/images/slide-image1.jpg"
+                src="./images/slide-image1.jpg"
                 class="d-block w-100"
                 alt="Friend Group"
               />
@@ -148,7 +148,7 @@
             <div class="carousel-item">
               <div class="carousel-img-overlay"></div>
               <img
-                src="../src/images/slide-image2.jpg"
+                src="./images/slide-image2.jpg"
                 class="d-block w-100"
                 alt="Plane"
               />
@@ -156,7 +156,7 @@
             <div class="carousel-item">
               <div class="carousel-img-overlay"></div>
               <img
-                src="../src/images/slide-image3.jpg"
+                src="./images/slide-image3.jpg"
                 class="d-block w-100"
                 alt="Woman Travelling"
               />
