--- a/public/schedule.html
+++ b/public/schedule.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="../src/css/schedule.css" />
+    <link rel="stylesheet" href="./css/schedule.css" />
   </head>
   <body class="bg-light">
     <!-- Header -->
