--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
       </div>
     </section>
 
-    <script type="module" src="../src/js/app.js"></script>
-    <script src="../src/js/animations.js"></script>
+    <script type="module" src="./js/app.js"></script>
+    <script src="./js/animations.js"></script>
   </body>
 </html>
