update main page

--- a/public/main_page.html
+++ b/public/main_page.html
@@ -203,8 +203,8 @@
       </div>
     </section>
 
-    <script src="../src/js/places.js"></script>
-    <script src="../src/js/search.js"></script>
+    <script src="./js/places.js"></script>
+    <script src="./js/search.js"></script>
     <!-- <script src="../src/js/schedule.js"></script> -->
 
     <script
