--- a/public/main_page.html
+++ b/public/main_page.html
@@ -203,7 +203,7 @@
       </div>
     </section>
 
-    <script src="./js/places.js"></script>
+    <script type="module" src="./js/places.js"></script>
     <script src="./js/search.js"></script>
     <!-- <script src="../src/js/schedule.js"></script> -->
 
