--- a/public/schedule.html
+++ b/public/schedule.html
@@ -238,6 +238,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../src/js/schedule.js"></script>
+    <script src="js/schedule.js"></script>
   </body>
 </html>
